--- a/Hamburguesas/Base.lproj/Main.storyboard
+++ b/Hamburguesas/Base.lproj/Main.storyboard
@@ -17,43 +17,63 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Quieres una Hamburguesa?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAi-5a-zLA">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quieres una Hamburguesa?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fAi-5a-zLA">
                                 <rect key="frame" x="24" y="73" width="326" height="33"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0E-W9-lP8">
-                                <rect key="frame" x="161" y="415" width="47" height="23"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7k-D1-3KR">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7k-D1-3KR">
                                 <rect key="frame" x="97" y="354" width="180" height="30"/>
                                 <state key="normal" title="Quiero una hambueguesa!"/>
                                 <connections>
                                     <action selector="buttonHamburguesa" destination="BYZ-38-t0r" eventType="touchUpInside" id="iFX-ko-0Ue"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lt3-Rz-QkJ">
-                                <rect key="frame" x="161" y="392" width="47" height="23"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lt3-Rz-QkJ">
+                                <rect key="frame" x="97" y="392" width="180" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="Pek-VF-c46"/>
+                                    <constraint firstAttribute="width" constant="180" id="km8-WV-R1j"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0E-W9-lP8">
+                                <rect key="frame" x="97" y="415" width="180" height="23"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="23" id="qpY-Ff-7L6"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Q0E-W9-lP8" firstAttribute="top" secondItem="Lt3-Rz-QkJ" secondAttribute="bottom" id="2FH-vX-qlF"/>
+                            <constraint firstItem="fAi-5a-zLA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Alr-26-rA8"/>
+                            <constraint firstItem="fAi-5a-zLA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="53" id="HaK-Mh-XEK"/>
+                            <constraint firstItem="Q0E-W9-lP8" firstAttribute="centerX" secondItem="fAi-5a-zLA" secondAttribute="centerX" id="Jcf-Eo-VGs"/>
+                            <constraint firstItem="l7k-D1-3KR" firstAttribute="centerX" secondItem="fAi-5a-zLA" secondAttribute="centerX" id="LMz-DR-ax0"/>
+                            <constraint firstItem="Lt3-Rz-QkJ" firstAttribute="top" secondItem="l7k-D1-3KR" secondAttribute="bottom" constant="8" symbolic="YES" id="Q6d-FA-i6t"/>
+                            <constraint firstItem="Lt3-Rz-QkJ" firstAttribute="leading" secondItem="Q0E-W9-lP8" secondAttribute="leading" id="ZX3-1S-dCW"/>
+                            <constraint firstItem="Lt3-Rz-QkJ" firstAttribute="centerX" secondItem="fAi-5a-zLA" secondAttribute="centerX" id="nhQ-wI-t74"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Q0E-W9-lP8" secondAttribute="bottom" constant="229" id="pVD-sc-tbk"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="labelButton" destination="l7k-D1-3KR" id="fk6-rs-tJO"/>
                         <outlet property="labelHamburguesa" destination="Lt3-Rz-QkJ" id="Wd4-Vj-LSs"/>
                         <outlet property="labelPais" destination="Q0E-W9-lP8" id="ree-xC-gb1"/>
+                        <outlet property="labelTitle" destination="fAi-5a-zLA" id="I1d-fO-XrU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="540.5" y="362.5"/>
+            <point key="canvasLocation" x="632.5" y="366.5"/>
         </scene>
     </scenes>
 </document>
